# vfx

./: .gitignore  README.md
advect/: CMakeLists.txt  advectSubmit.py  bunny.C  bunnyFile.C  cumulo.C  cumuloSubmit.py  earSubmit.py  ears.C  generateCM  runCumulo.py
advect/config/: advect.cfg  pyro.cfg  render.cfg
advect/include/: Advect.h  ConfigParser.h  DoAdvection.h  Grid.h  Levelsets.h  Matrix.h  Operations.h  Pyroclastic.h  Types.h  VDBTool.h  VectorField.h  Xform.h
advect/src/: Grid.C  Image.C  Levelsets.C  Lighting.C  PerlinNoise.C  Pyroclastic.C
figure/: Camera.h~  ImplicitFuncOps.h  Makefile  Makefile~  Operations.h  PropertyVolume.h  Renderer.C  Renderer.C~  Renderer.h  Renderer.h~  ScalarVolumeXform.h  Shape.h  Shape.h~  Volume.h~  VolumeColor.h  VolumeColor.h~  figure  figure.C  figure.C~  test.exr  testopenmp.C
figure/figureFile/: Makefile  OIIOFiles.C  (+5 more)
levelsets/: Grid.C  Grid.h  Levelsets.C  Levelsets.h  Lighting.C  Lighting.h  Makefile  ModelLoad.h  MyBunny.h  MyHumanoid.h  MyHybrid.h  MyTeapot.h  Operations.h  PolyModel.C  PolyModel.h  PropertyVolume.h  README  README.md  Renderer.C  Renderer.h  ScalarVolumeXform.h  Structs.h  Tools.h  Types.h  figure.C  levelsets  levelsets.C  levelsetsmain.C
pyro/: CMakeLists.txt  README.md  pyroSubmit.py
pyro/include/: DoPyros.h  Grid.h  Lighting.h  Noise.h  Operations.h  Parms.h  PerlinNoise.h  PropertyVolume.h  Types.h
pyro/src/: Grid.C  Lighting.C  Noise.C  Pyroclastic.C  Renderer.C  pyro.C
wand/: CMakeLists.txt  README.md  file.C  generateMain.py  generateTest.py  generateWisps.py  myTest.C  submitWand.py  test.C  wand.C
wedges/: CMakeLists.txt  README.md  addText.py  wedgeSubmit.py
(+59 files in other folders)
